--- a/webpage/docs/ASPICE/01/02.md
+++ b/webpage/docs/ASPICE/01/02.md
@@ -1,65 +1,97 @@
 # Improving Project Setup with ASPICE
 
-Effective project setup is critical in ensuring the success of automotive software development projects. The structured approach of Automotive SPICE (ASPICE) offers a solid foundation for improving the project setup by standardizing processes and creating a well-documented knowledge base. Below, we explore how ASPICE can address specific aspects of project setup, as illustrated by the examples provided.
+Effective project setup is critical to the success of automotive software development. The structured approach of Automotive SPICE (ASPICE) provides a solid foundation for improving project setup by standardizing processes, defining roles, and establishing a well‐documented knowledge base. Below, we explain how ASPICE can address key aspects of project setup, drawing on best practices and current process references.
 
-## 1. **Standardize Project Management Tasks**
+---
 
-In the context of ASPICE, standardization of project management tasks is achieved through the **Project Management (SUP.10)** process. This process ensures that all project activities are planned, monitored, and controlled in a consistent manner across different projects. By standardizing these tasks, organizations can ensure that:
+## 1. Standardize Project Management Tasks
 
-- **Resource allocation** is optimized, reducing bottlenecks and ensuring timely project delivery.
-- **Schedules and budgets** are consistently tracked, reducing the risk of project overruns.
-- **Communication plans** are clear, ensuring that all stakeholders are informed and aligned.
+A consistent approach to project management minimizes resource bottlenecks and prevents schedule or budget overruns. In ASPICE, this is achieved through the **Project Management (MAN.3)** process. By following MAN.3, organizations ensure that:
+  
+- **Resource allocation** is optimized through clear planning and monitoring.
+- **Schedules and budgets** are rigorously tracked against defined milestones.
+- **Communication plans** are established to keep all stakeholders aligned throughout the project lifecycle.
 
-This standardization leads to more predictable project outcomes and improved overall efficiency.
+Such standardization makes project outcomes more predictable and increases overall efficiency. (See also citeturn0search9 for maturity level details.)
 
-## 2. **Pre-defined Kick-off Activities**
+---
 
-Kick-off activities are essential to align all stakeholders and establish a common understanding of the project's objectives, scope, and deliverables. ASPICE emphasizes the importance of **Project Planning (SUP.10.1)**, which includes defining these initial activities. Pre-defined kick-off activities, such as stakeholder meetings, risk assessment workshops, and requirement reviews, ensure that:
+## 2. Pre-defined Kick-off Activities
 
-- All team members and stakeholders have a clear understanding of their roles and responsibilities.
-- Potential risks are identified and mitigation strategies are put in place from the start.
-- The project is set on a solid foundation, with a clear plan and achievable milestones.
+Kick-off activities are essential for aligning stakeholders and establishing a clear project vision. ASPICE embeds these activities within the overall planning framework of **MAN.3 Project Management** (often complemented by specific internal guidelines). Pre-defined kick-off activities—such as stakeholder meetings, risk assessment workshops, and requirement reviews—help to ensure that:
 
-## 3. **Re-use of Project Roles**
+- Every team member understands their roles and responsibilities.
+- Early risks are identified and mitigation strategies are implemented.
+- The project starts on a solid foundation with clearly defined milestones.
 
-ASPICE encourages the re-use of established roles and responsibilities across projects, particularly through the **Process Definition (ORG.1)** process. By re-using project roles, organizations can:
+This upfront clarity lays the groundwork for a successful project execution.
 
-- **Leverage existing expertise**, ensuring that experienced team members contribute to multiple projects without the need for retraining or redefinition of roles.
-- **Reduce the learning curve** for new projects, as team members are already familiar with their responsibilities.
-- **Promote consistency** in how roles are executed, leading to more reliable and repeatable project outcomes.
+---
 
-## 4. **Standardized Development Tool-Chain**
+## 3. Re-use of Project Roles
 
-A standardized tool-chain is crucial for maintaining consistency in development processes, particularly in complex automotive projects. ASPICE’s **Configuration Management (SUP.8)** process ensures that all development tools and environments are consistently configured and managed. This standardization:
+ASPICE promotes consistency by re-using well-defined roles and responsibilities across projects. This is supported by the **Process Definition (ORG.1)** process, which requires organizations to document their processes and the associated roles. Re-using established roles ensures that:
 
-- **Reduces integration issues** by ensuring all tools are compatible and work seamlessly together.
-- **Improves efficiency** by providing a consistent environment that developers are familiar with, reducing the time spent on tool setup and configuration.
-- **Ensures traceability** by maintaining consistent and well-documented configurations across the project lifecycle.
+- **Existing expertise** is leveraged effectively without the need for retraining.
+- The **learning curve** for new projects is shortened, as team members are familiar with their duties.
+- There is **consistency** in role execution, leading to more reliable and repeatable outcomes.
 
-## 5. **Re-use of Naming Conventions and Storage Locations**
+Standardizing roles across projects helps maintain organizational efficiency and enhances knowledge transfer.
 
-Consistency in naming conventions and storage locations is critical for maintaining a well-organized and navigable project structure. ASPICE’s **Configuration Management (SUP.8)** and **Document Management (SUP.9)** processes guide the re-use of these conventions across projects. This practice:
+---
 
-- **Enhances collaboration** by making it easier for team members to find and understand documents and code, regardless of their involvement in previous projects.
-- **Reduces errors** caused by misunderstandings or misinterpretations of file names or locations.
-- **Streamlines onboarding** for new team members, who can quickly get up to speed with the project structure.
+## 4. Standardized Development Tool-Chain
 
-## 6. **Standardization and Re-use of Processes, Methods, Tools, and Templates**
+A standardized development tool-chain is vital to manage complex automotive projects. ASPICE’s **Configuration Management (SUP.8)** process ensures that all development tools and environments are consistently configured and controlled. This standardization:
 
-ASPICE promotes the re-use of processes, methods, tools, and templates through its **Process Improvement (ORG.2)** and **Process Definition (ORG.1)** processes. This standardization ensures that best practices are consistently applied across projects. Key benefits include:
+- **Reduces integration issues** by ensuring tool compatibility and proper configuration.
+- **Improves efficiency** through a consistent development environment familiar to the entire team.
+- **Ensures traceability** by documenting tool settings and changes throughout the project lifecycle.
 
-- **Improved quality** by ensuring that all projects adhere to proven processes and methodologies.
-- **Increased efficiency** by reducing the need to develop new processes or tools for each project.
-- **Enhanced knowledge sharing** by creating a repository of standardized templates and tools that can be used across the organization.
+A well-managed tool-chain minimizes technical friction and supports smooth collaboration among distributed teams.
 
-## 7. **Establishing a Company Internal Knowledge Base for Development Processes**
+---
 
-ASPICE’s emphasis on process definition and improvement naturally leads to the creation of a comprehensive knowledge base. This knowledge base serves as a central repository for all process-related information, including documented methods, tools, and best practices. Establishing such a knowledge base:
+## 5. Re-use of Naming Conventions and Storage Locations
 
-- **Facilitates continuous improvement** by providing a platform for documenting lessons learned and incorporating them into future projects.
-- **Ensures consistency** across projects by providing a single source of truth for all process-related information.
-- **Supports onboarding and training** by offering a resource for new team members to quickly familiarize themselves with the organization’s processes.
+Maintaining consistency in naming conventions and storage locations is crucial for a well-organized project repository. ASPICE provides guidance through both **Configuration Management (SUP.8)** and **Documentation (SUP.7)** processes. Consistent naming and storage practices:
+
+- **Enhance collaboration** by making it easier for team members to locate and understand artifacts.
+- **Reduce errors** caused by misinterpretations or misplaced files.
+- **Streamline onboarding** by providing new team members with a clear and consistent structure from the start.
+
+This practice forms part of a broader effort to establish a single source of truth for all project-related information.
+
+---
+
+## 6. Standardization and Re-use of Processes, Methods, Tools, and Templates
+
+The re-use of established processes and tools is key to ensuring efficiency and consistency. ASPICE drives this re-use via the **Process Definition (ORG.1)** and **Process Improvement (ORG.2)** processes. Standardizing and re-using these assets means that:
+
+- **Improved quality** is achieved as projects follow proven methodologies and best practices.
+- **Increased efficiency** results from not having to reinvent processes for every project.
+- **Enhanced knowledge sharing** is fostered by a repository of templates, tools, and documented methods available to all teams.
+
+This systematic approach helps organizations sustain excellence across projects.
+
+---
+
+## 7. Establishing an Internal Knowledge Base for Development Processes
+
+One of ASPICE’s key strengths is its emphasis on formalizing processes and continuous improvement. This leads naturally to the development of an internal knowledge base—a centralized repository that includes:
+
+- **Documented processes, methods, and tools** as defined by ORG.1 and ORG.2.
+- **Best practices and lessons learned** from past projects, which inform continuous improvement.
+- **Onboarding and training materials** that help new team members quickly understand organizational standards.
+
+By maintaining this knowledge base, an organization ensures consistency across projects and facilitates ongoing process enhancement.
+
+---
 
 ## Conclusion
 
-Implementing ASPICE in the project setup phase provides a structured and consistent approach to managing automotive software development projects. By standardizing project management tasks, kick-off activities, roles, tool-chains, and naming conventions, and by establishing a robust knowledge base, organizations can significantly improve their project outcomes. ASPICE not only enhances efficiency and quality but also ensures that each project is aligned with industry standards and best practices, ultimately leading to more successful and reliable automotive products.
+Implementing ASPICE during the project setup phase creates a structured and repeatable foundation for automotive software development. Through standardized project management (MAN.3), pre-defined kick-off activities, re-use of established roles (ORG.1), a consistent tool-chain (SUP.8), harmonized naming conventions (SUP.7 and SUP.8), and a robust knowledge base, organizations can significantly improve project outcomes. ASPICE not only boosts efficiency and quality but also aligns projects with industry best practices and international standards, ultimately leading to more reliable and successful automotive products.
+
+---
+
+*Note: The process identifiers (e.g., MAN.3, SUP.7, SUP.8, ORG.1, ORG.2) referenced above are based on the standardized Automotive SPICE Process Reference Model. Actual implementations may adapt these codes slightly in accordance with organizational or regional guidelines.*
