--- a/webpage/docs/ASPICE/02/03.md
+++ b/webpage/docs/ASPICE/02/03.md
@@ -1,45 +1,53 @@
-# Understanding the Term "System" in ASPICE Projects
+# Understanding the Term System
 
-In ASPICE, the term "system" can have varying interpretations depending on the context within a project, whether it involves an Original Equipment Manufacturer (OEM) or a Tier 1 supplier. The term encompasses a broad spectrum of components, ranging from entire vehicles to specific electronic control units (ECUs). Below, we break down the understanding of "system" in both OEM and Tier 1 contexts, reflecting how ASPICE approaches the development and assessment of these systems.
+In Automotive SPICE (ASPICE) projects, the term “system” can be interpreted differently depending on the stakeholder’s perspective. For an Original Equipment Manufacturer (OEM), the system generally refers to the complete vehicle or a major subsystem thereof. In contrast, for a Tier 1 supplier, “system” is often used in a more focused sense—typically referring to a specific electronic control unit (ECU) and its embedded software. ASPICE provides a framework to manage and assess these varying levels of system integration, ensuring that both broad and granular system definitions meet the high standards required in automotive development.
 
-## **OEM Perspective: The Car as a System**
+---
 
-From the OEM's viewpoint, the entire vehicle or a significant feature within the vehicle is considered the "system." This broader perspective incorporates numerous subsystems and components that collectively ensure the vehicle operates as intended. The system here is complex, encompassing various hardware and software elements integrated into a cohesive unit.
+## OEM Perspective: The Car as a System
 
-1. **System Architecture:**
-   - **Definition:** In the context of a car, the system architecture refers to the communication network within the vehicle, which could include technologies like CAN (Controller Area Network), LIN (Local Interconnect Network), and Ethernet.
-   - **Purpose:** This architecture defines how different ECUs, sensors, and other components communicate and interact with each other to ensure the vehicle functions properly.
+From the OEM viewpoint, the “system” usually represents the entire vehicle or a significant integrated feature. This broader definition encompasses multiple subsystems and components whose seamless operation is critical for overall vehicle performance.
 
-2. **System Integration:**
-   - **Definition:** System integration at the OEM level involves integrating various ECUs and subsystems on a test bench or directly within the vehicle.
-   - **Purpose:** This process ensures that all the individual components work together seamlessly, maintaining overall system integrity and functionality when combined into the full vehicle system.
+### 1. System Architecture
+- **Definition:** The system architecture in a vehicle covers the overall communication network and the integration of various subsystems. It includes protocols such as CAN (Controller Area Network), LIN (Local Interconnect Network), and increasingly, Ethernet.
+- **Purpose:** This architecture defines the interaction between numerous ECUs, sensors, and other vehicle components, ensuring that data flows efficiently and reliably throughout the entire vehicle.
 
-3. **System Testing:**
-   - **Definition:** Testing from the OEM perspective includes verifying the entire vehicle or its major subsystems on test tracks or public roads.
-   - **Purpose:** This stage ensures that the vehicle meets all functional, safety, and performance requirements under real-world conditions before it is released to the market.
+### 2. System Integration
+- **Definition:** At the OEM level, system integration involves combining various hardware and software components—often through bench tests or in-vehicle integration—to form a cohesive system.
+- **Purpose:** The goal is to verify that all subsystems operate together as intended. Successful integration is critical for ensuring that complex vehicle functions are delivered reliably under real-world conditions.
 
-## **Tier 1 Supplier Perspective: The ECU as a System**
+### 3. System Testing
+- **Definition:** System testing from an OEM perspective includes comprehensive evaluations of the complete vehicle or major subsystems. Testing can take place on test tracks or via on-road trials.
+- **Purpose:** This phase validates that the vehicle, as a system, meets all functional, safety, and performance requirements. It ensures that the end product will perform safely and reliably when deployed to the market.
 
-For Tier 1 suppliers, the "system" often refers to a specific ECU or a part of it, including the software that runs on it. The focus here is more granular, centering on the development and integration of the ECU within the larger vehicle system.
+---
 
-1. **System Requirements:**
-   - **Definition:** At this level, system requirements pertain to the detailed specifications of the ECU, including its intended functionality, performance criteria, and interface requirements with other vehicle components.
-   - **Purpose:** These requirements serve as the foundation for developing and validating the ECU, ensuring it meets the OEM’s expectations and integrates well with the broader vehicle system.
+## Tier 1 Supplier Perspective: The ECU as a System
 
-2. **System Architecture:**
-   - **Definition:** The system architecture for an ECU outlines its internal structure, including the hardware and software components, communication interfaces, and overall design.
-   - **Purpose:** This architecture ensures that the ECU is designed to perform its intended functions reliably and can be integrated effectively into the vehicle’s broader system.
+For Tier 1 suppliers, the term “system” is often applied at a more granular level—referring primarily to a specific ECU or even a part thereof, along with the associated software.
 
-3. **System Integration:**
-   - **Definition:** System integration at the Tier 1 level involves flashing the software onto the ECU and assembling it into its housing, preparing it for installation into the vehicle.
-   - **Purpose:** This process confirms that the software and hardware components of the ECU work together as expected, and that the ECU is ready for further integration into the vehicle.
+### 1. System Requirements
+- **Definition:** At this level, “system” refers to the detailed set of requirements for a particular ECU. These requirements specify functionality, performance criteria, and interface needs with other vehicle systems.
+- **Purpose:** Clear system requirements provide the foundation for designing and developing the ECU so that it aligns with OEM expectations and integrates seamlessly into the larger vehicle system.
 
-4. **System Testing:**
-   - **Definition:** Testing at the ECU level includes functional tests, as well as environmental (ENV) and electromagnetic compatibility (EMC) tests, to ensure the ECU performs under various conditions.
-   - **Purpose:** These tests validate that the ECU meets all operational and regulatory requirements, ensuring it can withstand the harsh conditions of automotive environments while functioning correctly within the vehicle system.
+### 2. System Architecture (ECU Level)
+- **Definition:** The system architecture for an ECU outlines the internal structure, including both hardware and software elements. It details the communication interfaces, data flows, and component interactions within the ECU.
+- **Purpose:** This architectural blueprint ensures that the ECU is designed to fulfill its intended functions reliably while being compatible with the overall vehicle architecture.
+
+### 3. System Integration (ECU Level)
+- **Definition:** For Tier 1 suppliers, system integration involves activities such as flashing software onto the ECU, assembling the unit, and validating the interaction between its hardware and software components.
+- **Purpose:** This step confirms that the ECU operates correctly as an integrated unit, which is critical before it is incorporated into the vehicle. It often includes preliminary integration tests in controlled environments.
+
+### 4. System Testing (ECU Level)
+- **Definition:** ECU-level testing covers functional tests as well as environmental (ENV) and electromagnetic compatibility (EMC) tests. These tests are designed to ensure that the ECU operates reliably under a range of conditions.
+- **Purpose:** System testing at this level validates that the ECU meets all regulatory and performance requirements, ensuring that it can withstand the stresses of automotive operation while contributing to the vehicle’s overall performance.
+
+---
 
 ## Conclusion
 
-In Automotive SPICE (ASPICE) projects, the term "system" is understood differently depending on whether the perspective is from an OEM or a Tier 1 supplier. For an OEM, the system often refers to the entire vehicle or a significant feature within it, with a focus on ensuring that all components work together harmoniously. For a Tier 1 supplier, the system typically refers to an individual ECU, with an emphasis on developing and validating this specific component within the broader vehicle context.
+In ASPICE projects, the interpretation of the term “system” varies with perspective. For OEMs, “system” encompasses the entire vehicle or major subsystems, emphasizing comprehensive system architecture, integration, and real-world testing. For Tier 1 suppliers, the focus is narrower—centered on individual ECUs, including detailed requirements, internal architecture, and targeted integration and testing procedures.
 
-Understanding these different perspectives is crucial for effective communication and collaboration between OEMs and Tier 1 suppliers, as it ensures that all parties have a clear understanding of the scope and requirements at each level of the system. Automotive SPICE provides the framework to manage and assess these systems effectively, ensuring that both the individual components and the complete vehicle system meet the high standards required in the automotive industry.
+This differentiated understanding is essential for effective collaboration between OEMs and Tier 1 suppliers. By leveraging ASPICE’s structured process models, all parties can ensure that both high-level systems and their constituent components meet stringent quality, safety, and performance standards in the automotive industry.
+
+*Note: The terminology and process descriptions referenced above (e.g., system integration, system testing) are aligned with ASPICE best practices and the Automotive SPICE Process Reference Model. Variations may occur based on organizational or regional adaptations.* 
