--- a/webpage/docs/ASPICE/03/01.md
+++ b/webpage/docs/ASPICE/03/01.md
@@ -1,89 +1,107 @@
 # Understanding ASPICE Process Groups and Capability Levels
 
-In ASPICE, understanding the different process groups and their associated capability levels is crucial for assessing and improving the software development processes within automotive projects. The provided images illustrate the ASPICE process groups and the corresponding ISO/IEC 33020:2015 process capability levels. Below, we delve into the key aspects of these elements.
+In Automotive SPICE (ASPICE), a clear understanding of the different process groups and their associated capability levels is key to evaluating and improving software development processes. ASPICE is built on a two-dimensional framework: one dimension covers the defined process groups, and the other specifies the capability levels derived from ISO/IEC 33020:2015. Together, these elements guide organizations in achieving higher process maturity and ultimately delivering high-quality automotive software.
 
-## **ASPICE Process Groups**
+---
 
-ASPICE divides processes into distinct groups based on their role in the software development lifecycle. Each process group contains several processes that address specific aspects of software engineering, management, and support. Here’s a breakdown of the main groups as depicted in the first image:
+## ASPICE Process Groups
 
-1. **System Engineering Process Group (SYS):**
-   - **Key Processes:** 
-     - SYS.1: Requirements Elicitation
-     - SYS.2: System Requirements Analysis
-     - SYS.3: System Architectural Design
-     - SYS.4: System Integration and Integration Test
-     - SYS.5: System Qualification Test
-   - **Purpose:** Focuses on the activities related to the engineering of the system as a whole, including requirements gathering, system design, integration, and testing.
+ASPICE divides software and supporting processes into distinct groups based on their roles in the development lifecycle. Each process group focuses on a specific aspect of engineering, management, or support. Below is an overview of the main process groups:
 
-2. **Software Engineering Process Group (SWE):**
-   - **Key Processes:** 
-     - SWE.1: Software Requirements Analysis
-     - SWE.2: Software Architectural Design
-     - SWE.3: Software Detailed Design and Unit Construction
-     - SWE.4: Software Unit Verification
-     - SWE.5: Software Integration and Integration Test
-     - SWE.6: Software Qualification Test
-   - **Purpose:** Encompasses processes specifically related to software development, including requirements, design, coding, integration, and testing.
+### 1. System Engineering Process Group (SYS)
+- **Key Processes:**
+  - SYS.1: Requirements Elicitation
+  - SYS.2: System Requirements Analysis
+  - SYS.3: System Architectural Design
+  - SYS.4: System Integration and Integration Test
+  - SYS.5: System Qualification Test
+- **Purpose:**  
+  Focuses on end-to-end activities for the entire system. It encompasses gathering requirements from stakeholders, designing the overall system architecture, integrating individual components, and validating the system against real-world operational conditions.
 
-3. **Supporting Process Group (SUP):**
-   - **Key Processes:**
-     - SUP.1: Quality Assurance
-     - SUP.4: Joint Review
-     - SUP.7: Documentation
-     - SUP.8: Configuration Management
-     - SUP.9: Problem Resolution Management
-     - SUP.10: Change Request Management
-   - **Purpose:** These processes provide the necessary support functions that ensure the main engineering processes are executed effectively, including quality assurance, reviews, documentation, and configuration management.
+### 2. Software Engineering Process Group (SWE)
+- **Key Processes:**
+  - SWE.1: Software Requirements Analysis
+  - SWE.2: Software Architectural Design
+  - SWE.3: Software Detailed Design and Unit Construction
+  - SWE.4: Software Unit Verification
+  - SWE.5: Software Integration and Integration Test
+  - SWE.6: Software Qualification Test
+- **Purpose:**  
+  Concentrates on the development of software components. This group covers everything from capturing detailed software requirements to designing, constructing, integrating, and verifying the software to ensure it meets its specified functions and quality criteria.
 
-4. **Management Process Group (MAN):**
-   - **Key Processes:**
-     - MAN.3: Project Management
-     - MAN.5: Risk Management
-     - MAN.6: Measurement
-   - **Purpose:** Focuses on the management aspects of projects, ensuring that they are planned, monitored, and controlled efficiently.
+### 3. Supporting Process Group (SUP)
+- **Key Processes:**
+  - SUP.1: Quality Assurance
+  - SUP.4: Joint Review
+  - SUP.7: Documentation
+  - SUP.8: Configuration Management
+  - SUP.9: Problem Resolution Management
+  - SUP.10: Change Request Management
+- **Purpose:**  
+  Provides the support needed for the main engineering processes. These processes ensure that the work is performed to a defined standard through quality checks, regular reviews, proper documentation, and effective change management.
 
-5. **Supply Process Group (SPL) and Acquisition Process Group (ACQ):**
-   - **Key Processes:** 
-     - SPL.1: Supplier Tendering
-     - SPL.2: Product Release
-     - ACQ.4: Supplier Monitoring
-     - ACQ.13: Project Requirements
-     - ACQ.14: Supplier Qualification
-   - **Purpose:** These processes deal with managing the relationship between the OEM and suppliers, including procurement, supplier selection, and monitoring.
+### 4. Management Process Group (MAN)
+- **Key Processes:**
+  - MAN.3: Project Management
+  - MAN.5: Risk Management
+  - MAN.6: Measurement
+- **Purpose:**  
+  Addresses the oversight and control functions required for project success. It ensures that projects are properly planned, risks are mitigated, and performance is measured, thereby driving predictable and repeatable outcomes.
 
-6. **Process Improvement Process Group (PIM) and Reuse Process Group (REU):**
-   - **Key Processes:**
-     - PIM.3: Process Improvement
-     - REU.2: Reuse Program Management
-   - **Purpose:** PIM processes are focused on the continuous improvement of processes, while REU processes manage the reuse of software components across different projects.
+### 5. Supply Process Group (SPL) and Acquisition Process Group (ACQ)
+- **Key Processes:**
+  - SPL.1: Supplier Tendering
+  - SPL.2: Product Release
+  - ACQ.4: Supplier Monitoring
+  - ACQ.13: Project Requirements
+  - ACQ.14: Supplier Qualification
+- **Purpose:**  
+  Manages the interface between OEMs and their suppliers. These groups focus on procurement, supplier selection, qualification, and ongoing monitoring to ensure that external inputs meet defined standards.
 
-## **ASPICE Capability Levels (ISO/IEC 33020:2015)**
+### 6. Process Improvement Process Group (PIM) and Reuse Process Group (REU)
+- **Key Processes:**
+  - PIM.3: Process Improvement
+  - REU.2: Reuse Program Management
+- **Purpose:**  
+  Aims to drive continuous improvement and leverage existing assets. PIM processes focus on systematically refining and enhancing existing processes, while REU processes manage the re-use of software components, saving time and resources across projects.
 
-The second image outlines the capability levels defined by ISO/IEC 33020:2015, which are used to assess the maturity of processes within the ASPICE framework. Understanding these levels helps organizations determine their current state and identify areas for improvement.
+---
 
-1. **Level 0: Incomplete Process**
-   - **Explanation:** No process is evident, or the process does not produce the necessary output.
+## ASPICE Capability Levels (ISO/IEC 33020:2015)
 
-2. **Level 1: Performed Process**
-   - **Process Attribute:** Process Performance (PA 1.1)
-   - **Explanation:** The process is performed and produces the necessary output, but it may not be managed or standardized.
+The ASPICE framework uses a maturity model—aligned with ISO/IEC 33020:2015—to assess the effectiveness of development processes. The capability levels range from 0 to 5 and provide a clear indication of process maturity:
 
-3. **Level 2: Managed Process**
-   - **Process Attributes:** 
-     - Work Product Management (PA 2.2)
-     - Performance Management (PA 2.1)
-   - **Explanation:** The process is not only performed but also managed. This means that activities and work products are systematically planned, tracked, and controlled.
+### Level 0: Incomplete Process
+- **Explanation:**  
+  No process is evident, or the process fails to produce the required output.
 
-4. **Level 3: Established Process**
-   - **Process Attributes:** 
-     - Process Definition (PA 3.1)
-     - Process Deployment (PA 3.2)
-   - **Explanation:** The process is standardized, documented, and maintained. It operates within a defined process architecture and is consistently applied across projects.
+### Level 1: Performed Process
+- **Process Attribute:** Process Performance (PA 1.1)
+- **Explanation:**  
+  The process is executed and produces the expected output; however, it is typically not managed or standardized.
 
-5. **Levels 4 and 5 (Predictable and Innovating Processes)**
-   - **Higher levels of capability involve establishing quantitative control over the processes (Level 4) and continually improving the processes in response to changing organizational goals (Level 5).**
-   - **Explanation:** These levels focus on refining processes to achieve greater predictability and responsiveness, driving continuous innovation and improvement.
+### Level 2: Managed Process
+- **Process Attributes:** 
+  - Work Product Management (PA 2.2)
+  - Performance Management (PA 2.1)
+- **Explanation:**  
+  The process is planned, executed, and controlled. Activities and work products are systematically managed to ensure reliability and repeatability.
 
-# Conclusion
+### Level 3: Established Process
+- **Process Attributes:** 
+  - Process Definition (PA 3.1)
+  - Process Deployment (PA 3.2)
+- **Explanation:**  
+  The process is standardized and documented organization-wide. It is consistently applied across projects, leading to stable and predictable outcomes.
 
-The combination of ASPICE process groups and capability levels provides a comprehensive framework for assessing and improving automotive software development processes. By understanding and applying these concepts, organizations can enhance their process maturity, leading to higher quality outputs, improved efficiency, and greater alignment with industry standards. This structured approach ensures that organizations can meet the stringent demands of the automotive sector, fostering innovation and delivering reliable, high-performing products.
+### Levels 4 and 5: Predictable and Innovating Processes
+- **Explanation:**  
+  At Level 4, quantitative metrics are used to control and predict process performance, ensuring that the process operates within defined limits. Level 5 represents an optimizing state where processes are continuously improved based on quantitative feedback and innovation, allowing organizations to adapt to changing business goals and technological advances.
+
+---
+
+## Conclusion
+
+The combination of clearly defined ASPICE process groups and capability levels provides a comprehensive framework for assessing and improving automotive software development processes. Understanding the distinct roles of each process group—from system and software engineering to support, management, supply, and continuous improvement—helps organizations ensure that every aspect of development is addressed. Coupled with the maturity model (from Level 0 to Level 5), organizations can objectively evaluate their current process capabilities and identify targeted improvements. This structured approach not only supports enhanced quality and efficiency but also ensures alignment with industry standards and customer expectations in the competitive automotive sector.
+
+*Note: The process identifiers (e.g., SYS.1, SWE.1, SUP.8, MAN.3) and capability level attributes referenced in this document are based on the standard Automotive SPICE Process Reference Model and ISO/IEC 33020:2015. Organizational adaptations may lead to slight variations in these references.*
